Assign analog channels from AMDS to inverters Add code to read and converter raw data from AMDS to analog voltage

--- a/My_C_Code/.project
+++ b/My_C_Code/.project
@@ -27,7 +27,7 @@
 		<link>
 			<name>common</name>
 			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/common</locationURI>
+			<location>C:/Users/zwang2299/Zhouzhou_AMDC/AMDC-Firmware/sdk/bare/common</location>
 		</link>
 	</linkedResources>
 </projectDescription>
