--- a/My_C_Code/.cproject
+++ b/My_C_Code/.cproject
@@ -30,11 +30,11 @@
 									<listOptionValue builtIn="false" value="C:/Users/zwang2299/Zhouzhou_AMDC/My_C_Code/bare/common"/>
 									<listOptionValue builtIn="false" value="C:/Users/zwang2299/Zhouzhou_AMDC/My_C_Code/bare/bare"/>
 									<listOptionValue builtIn="false" value="C:/Users/zwang2299/Zhouzhou_AMDC/My_C_Code/amdc_bsp/ps7_cortexa9_0/include"/>
+									<listOptionValue builtIn="false" value="C:/Users/zwang2299/Zhouzhou_AMDC/My_C_Code/bare/amdc_bsp_cpu1/ps7_cortexa9_1/include"/>
 									<listOptionValue builtIn="false" value="../bare/bare"/>
 									<listOptionValue builtIn="false" value="../bare/amdc_bsp_cpu1/ps7_cortexa9_1/include"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/bare/bare}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/bare/amdc_bsp_cpu1/ps7_cortexa9_1/include}&quot;"/>
-									<listOptionValue builtIn="false" value="../bare/common"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/bare/app_cpu1/common}&quot;"/>
 								</option>
 								<inputType id="xilinx.gnu.assembler.input.631082709" superClass="xilinx.gnu.assembler.input"/>
 							</tool>
@@ -50,8 +50,8 @@
 								</option>
 								<option id="xilinx.gnu.compiler.dircategory.includes.1596529872" name="Include Paths" superClass="xilinx.gnu.compiler.dircategory.includes" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/bare}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/bare/common}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/amdc_bsp_cpu1/ps7_cortexa9_1/include}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/bare/common}&quot;"/>
 								</option>
 								<inputType id="xilinx.gnu.armv7.c.compiler.input.1322043513" name="C source files" superClass="xilinx.gnu.armv7.c.compiler.input"/>
 							</tool>
@@ -106,7 +106,9 @@
 					</sourceEntries>
 				</configuration>
 			</storageModule>
-			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
+			<storageModule moduleId="org.eclipse.cdt.core.externalSettings">
+				<externalSettings containerId="amdc_bsp_cpu1;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier"/>
+			</storageModule>
 		</cconfiguration>
 		<cconfiguration id="xilinx.gnu.armv7.exe.release.213836590">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="xilinx.gnu.armv7.exe.release.213836590" moduleId="org.eclipse.cdt.core.settings" name="Release">
